--- a/documents/rapport/rapport/biblio.bib
+++ b/documents/rapport/rapport/biblio.bib
@@ -7,7 +7,7 @@
   pages = {57-74},
   year  = {2009},
   URL = {https://doi.org/10.1080/2151237X.2009.10129287},
-  note = "[Accès en Avril 2018]"
+  note = "[Accès en avril 2018]"
 }
 
 
@@ -17,7 +17,7 @@
   AUTHOR = "Ulrich, Thatcher",
   TITLE = "Rendering Massive Terrains Using Chunked Level of Detail Control",
   YEAR = "2002",
-  note = "[Accès en Avril 2018]"
+  note = "[Accès en avril 2018]"
 }
 
 @article{Perlin,
@@ -38,5 +38,57 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {algorithm development, fire, functional composition, interactive, pixel stream editor, solid texture, space function, stochastic modelling, turbulence, waves},
- note = "[Accès en Avril 2018]"
+ note = "[Accès en avril 2018]"
 } 
+
+
+@article{Clark,
+ author = {Clark, James H.},
+ title = {Hierarchical Geometric Models for Visible Surface Algorithms},
+ journal = {Commun. ACM},
+ issue_date = {Oct. 1976},
+ volume = {19},
+ number = {10},
+ month = oct,
+ year = {1976},
+ issn = {0001-0782},
+ pages = {547--554},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/360349.360354},
+ doi = {10.1145/360349.360354},
+ acmid = {360354},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {geometric models, hidden surface algorithms, hierarchical data structures, visible surface algorithms},
+ note = "[Accès en avril 2018]"
+} 
+
+@article{Enrico,
+author = {Puppo, Enrico and Scopigno, Roberto},
+year = {1997},
+month = {01},
+pages = {},
+journal={~},
+title = {Simplification LOD and Multiresolution},
+ note = "[Accès en avril 2018]"
+}
+
+@article{view-dependent,
+author = {Luebke, D and Erikson, C},
+year = {1997},
+month = {01},
+pages = {199-208},
+journal={~},
+title = {View-dependent simplification of arbitrary polygonal environments},
+booktitle = {Proc. of ACM SIGGRAPH},
+ note = "[Accès en avril 2018]"
+}
+
+@article{ROAM,
+  title={ROAMing terrain: Real-time Optimally Adapting Meshes},
+  author={Mark A. Duchaineau and Murray Wolinsky and David E. Sigeti and Mark C. Miller and Charles Aldrich and Mark B. Mineev-Weinstein},
+  journal={Proceedings. Visualization '97 (Cat. No. 97CB36155)},
+  year={1997},
+  pages={81-88},
+ note = "[Accès en avril 2018]"
+}
